feat(metrics): node_exporter host metric queries for diagnosis
- cpu_usage/memory_usage 从 K8s 容器指标改为 node_exporter 主机指标，对齐 HostHighCpu/MemoryUsageHigh 告警规则
- 删除改造后遗留的 podSelector 死代码（SpotBugs DLS_DEAD_LOCAL_STORE）